# llm-with-jax-practice

./: main.py  pyproject.toml  requirements.txt
llm_with_jax_practice/: __init__.py  checkpoint.py  data_loader.py  functions.py  layers.py  layers_test.py  mem_and_flops_counters.py  optimizer.py  sharding.py  train_config.py  train_main.py  train_utils.py  transformer.py
llm_with_jax_practice/scripts/: run_llm_train.sh
tests/: checkpoint_test.py  conftest.py  data_loader_test.py  functions_test.py  layers_test.py  mem_and_flops_counters_test.py  optimizer_test.py
